# PUE_GruppeA

./: .gitignore  README.md  main.py  main_power_array.py  pyproject.toml
src/: analyze_hr_data2.py  ekg_data.py  find_peaks.py  load_data.py  load_user_data.py  power_curve.py  power_curve_2.py  sort.py
