[project]
name = "TestprojektPUE2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sbreakerJM", email = "bs7517@mci4me.at"},
]
dependencies = ["numpy>=2.2.5", "matplotlib>=3.10.1", "streamlit>=1.45.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
